--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<div class="row centered">
+
+  <div class="col-12 col-sm-6 centered">
+    <router-outlet></router-outlet>
+  </div>
+</div>
