Menu screen available, needs logic

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
-.centered {
+.app-body {    
+    height: 100vh;
     display: flex;
-    justify-content: center;
+    align-items: center;
+}
+
+.canvas {
+    height: 500px;
+    background-color: #ff5050;
 }
