--- a/src/app/choose-piece/choose-piece.component.html
+++ b/src/app/choose-piece/choose-piece.component.html
@@ -1,7 +1,35 @@
-<div class="">
+<div class="options-body row">
 
-  <p>
-    choose-piece works!
-  </p>
+  <div class="col-12">
+    <p class="centered">Choose your piece</p>
+
+    <div class="button-spacing" data-toggle="buttons">
+      <label class="btn btn-warning big-btn">
+        <input type="radio" name="marker" id="circle" autocomplete="off" checked> O
+      </label>
+      <label class="btn btn-warning big-btn">
+        <input type="radio" name="marker" id="cross" autocomplete="off"> X
+      </label>
+    </div>
+  </div>
+
+  <div class="col-12">
+    <p class="centered">How many players?</p>
+
+    <div class="button-spacing" data-toggle="buttons">
+      <label class="btn btn-info big-btn">
+        <input type="radio" name="players" id="one-pl" autocomplete="off" checked> 1
+      </label>
+      <label class="btn btn-info big-btn">
+        <input type="radio" name="players" id="two-pl" autocomplete="off"> 2
+      </label>
+    </div>
+
+  </div>
+
+  <div class=" col-12 centered">
+    <button class="btn btn-success"> Play! </button>
+  </div>
+
 
 </div>
