--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="row centered">
+<div class="container-fluid centered app-body">
 
-  <div class="col-12 col-sm-6 centered">
+  <div class="col-12 col-sm-6 centered canvas">
     <router-outlet></router-outlet>
   </div>
+
 </div>
