set up the form, having problems with data-toggle

--- a/src/app/choose-piece/choose-piece.component.html
+++ b/src/app/choose-piece/choose-piece.component.html
@@ -1,14 +1,14 @@
-<div class="options-body row">
+<form class="options-body row" [formGroup]="optionsForm" (submit)="submitOptions(optionsForm)" novalidate>
 
   <div class="col-12">
     <p class="centered">Choose your piece</p>
 
     <div class="button-spacing" data-toggle="buttons">
       <label class="btn btn-warning big-btn">
-        <input type="radio" name="marker" id="circle" autocomplete="off" checked> O
+        <input type="radio" id="circle" name="marker" formControlName="marker" value="o"> O
       </label>
       <label class="btn btn-warning big-btn">
-        <input type="radio" name="marker" id="cross" autocomplete="off"> X
+        <input type="radio" id="cross" name="marker" formControlName="marker" value="x"> X
       </label>
     </div>
   </div>
@@ -18,18 +18,18 @@
 
     <div class="button-spacing" data-toggle="buttons">
       <label class="btn btn-info big-btn">
-        <input type="radio" name="players" id="one-pl" autocomplete="off" checked> 1
+        <input type="radio" [name]="players" formControlName="players" id="one-pl" value="1" checked> 1
       </label>
       <label class="btn btn-info big-btn">
-        <input type="radio" name="players" id="two-pl" autocomplete="off"> 2
+        <input type="radio" [name]="players" formControlName="players" id="two-pl" value="2"> 2
       </label>
     </div>
 
   </div>
 
   <div class=" col-12 centered">
-    <button class="btn btn-success"> Play! </button>
+    <button [disabled]="optionsForm.valid" class="btn btn-success" type="submit"> Play! </button>
   </div>
 
 
-</div>
+</form>
