--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,13 @@
-<p>
-  game works!
-</p>
+<div class="board container-fluid"> 
+
+    <!--<div class="row full-height" *ngFor="let x of [1, 2, 3]">-->
+        <div *ngFor="let y of [1,2,3,4, 5, 6, 7, 8, 9]" class="col-4 border">
+          {{y}}
+        </div>
+    <!--</div>-->
+
+  <div class="col-12" class="centered">
+    <button class="btn btn-warning" routerLink="/choose"> Return </button>
+  </div>
+</div>
+
