--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid centered app-body">
+<div class="row centered app-body">
+
+  <h1 class="col-12 centered"> Tic Tac Toe </h1>
 
   <div class="col-12 col-sm-6 centered canvas">
     <router-outlet></router-outlet>
