--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
-<div class="row centered app-body">
+<div class="container">
 
-  <h1 class="col-12 centered"> Tic Tac Toe </h1>
+  <div class="row">
+    <h1 class="col-12 centered"> Tic Tac Toe </h1>
+  </div>
 
-  <div class="col-12 col-sm-6 centered canvas">
-    <router-outlet></router-outlet>
+  <div class="row justify-content-sm-center">
+    <div class="col-12 col-sm-6 centered canvas">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 
 </div>
