--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -11,3 +11,10 @@
 .border {
     border: 1px solid black;
 }
+
+.marker {
+    font-size: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
