reworked win conditions, added reset, still need diagonals

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -16,5 +16,7 @@
 
   <div class="col-12" class="centered">
     <button class="btn btn-warning" routerLink="/choose"> Return </button>
+
+    <button class="btn btn-danger" (click)="reset()"> Reset </button>
   </div>
 </div>
