Changed player options to pass by route, modified bot ai

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,12 +1,21 @@
 <div class="board container-fluid">
 
-  <div>
-    Turn : {{markerParse(currentTurn)}}
+  <div class="row">
+    <div class="col-4">
+      Turn : {{markerParse(currentTurn)}}
+    </div>
+
+    <div class="col-4">
+      Winner: {{markerParse(winner)}}
+    </div>
+
+    <div class="col-4">
+      Player: {{markerParse(playerMarker)}} {{playerMarker}}
+    </div>
+
   </div>
 
-  <div>
-    Winner: {{markerParse(winner)}}
-  </div>
+
 
   <div class="row full-height" *ngFor="let bgRow of boardGame; let x=index">
     <div *ngFor="let element of bgRow; let y=index" class="col-4 border marker" (click)="placeMarker(x, y)">
